[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"


[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7" }
# pest = "2.7.15"
# pest_derive = "2.7.15"
wasm-bindgen = "0.2.99"
# wasm-bindgen-futures = { workspace = true }
logos = "0.15.0"
paste = "1.0.15"
# ahash = "0.8.11"
lasso = "0.7.3"
itertools = "0.13.0"
